<resources>
    <string name="app_name" translatable="false">Swaraj</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_issue">IssueActivity</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_issue_summary">Issue Summary</string>
    <string name="title_activity_issue_details">Issue Details</string>
    <string name="title_activity_info">Info</string>
    <string name="main_select">Select Category</string>
    <string name="main_transportation">Transportation</string>
    <string name="main_water">Water</string>
    <string name="main_law_and_order">Law And Order</string>
    <string name="main_electricity">Electricity</string>
    <string name="main_road">Road</string>
    <string name="main_sewage">Sewage</string>
    <string name="issue_complaints">%d complaints</string>
    <string name="issue_issues">%d issues</string>
    <string name="tab_issues">Issues</string>
    <string name="tab_analytics">Analytics</string>
    <string name="analytics_overall">Overall</string>
    <string name="analytics_constituency">Constituency</string>
    <string name="no_google_map_services">You need to install Google Services on your phone</string>
    <string name="no_internet">No internet access detected. App needs internet connection to work properly.</string>
    <string name="no_location">Location services are not enabled. Please enable location services. Please enable Location Access from Phone Settings.</string>
    <string name="issue_issue">Issues</string>
    <string name="issue_complaint">Complaints</string>
    <string name="issue_details_category_label">Issue Category</string>
    <string name="issue_details_name_label">Issue Name</string>
    <string name="issue_details_system_label">System Level</string>
    <string name="issue_details_description_label">Description</string>
    <string name="issue_details_attach_label">Attach Photo</string>
    <string name="issue_details_take_label">Take Photo</string>
    <string name="issue_details_post">Post</string>
    <string name="issue_details_remove_label">Remove Photo</string>
    <string name="issue_details_retake_label">Retake Photo</string>
    <string name="issue_details_edit_description_button">Edit</string>
    <string name="issue_details_add_description_button">Add Description</string>
    <string name="issue_details_or_label">OR</string>
    <string name="issue_details_enter_description">Please enter a brief description of the issue</string>
    <string name="issue_summary_success">Complaint Successful</string>
    <string name="issue_summary_message">Thank you for contacting us. Together we deliver governance !</string>
    <string name="issue_summary_address_label">Address</string>
    <string name="issue_summary_another_complaint">Another complaint</string>
    <string name="done">Done</string>
    <string name="user_pic_title">Choose Your Picture.</string>
    <string name="settings_how_it_works">How it works</string>
    <string name="settings_video">Watch A Video about Swaraj</string>
    <string name="settings_feedback">Send Your Feedback</string>
    <string name="settings_boundary_mode">Political Boundary Mode</string>
    <string name="settings_party_mode">Political Party Mode</string>
    <string name="settings_mla_inbox">MLA Inbox</string>
    <string name="settings_feedback_email_id">eswaraj.india@gmail.com</string>
    <string name="settings_feedback_email_subject">SWARAJ FEEDBACK</string>
    <string-array name="splash_text">
        <item>Select an issue in your locality that\'s bugging you for a while</item>
        <item>Post picture and submit your issue to know about your location MLA</item>
        <item>View overall and constituency level analytics on the existing civic amenity issues </item>
    </string-array>
    <string-array name="water">
        <item>No municipality water in this area.</item>
        <item>We have to heavily rely on tankers for water supply, please look into it.</item>
        <item>Water pipes leaking all over the place, water contamination dangers.</item>
        <item>Municipality water tastes  bad/oily.</item>
        <item>Water department staff very rude.</item>
        <item>Water department staff totally outdated&#8230; Stoneage.</item>
        <item>Water bills are too high.</item>
        <item>Water becoming totally inaffordable.</item>
        <item>Don\'t know how water comes to the city, please launch a water awareness day.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string name="law">Law and Order</string>
    <string-array name="electricity">
        <item>Enough these power cuts, increase power generation capacity.</item>
        <item>No 24x7 power in my area.</item>
        <item>Power stations and transformers not well maintained,making my area look dirty.</item>
        <item>Transformers unprotected. Blast every now and then.</item>
        <item>Powerlines are hanging too low in my neighbourhood.</item>
        <item>Electricity department staffs are rude.</item>
        <item>Electricity department staff totally outdated&#8230; Stoneage.</item>
        <item>Power too costly , totally not affordable, reduce prices.</item>
        <item>No initative from power department on educating customer.</item>
        <item>Why we do not have electricity awareness day,  I want to know what I pay for.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="transportation">
        <item>No public buses on this route.</item>
        <item>No public buses in my area.</item>
        <item>Traffic  Congestion too much we need metro tracks.</item>
        <item>Public buses not sufficient.</item>
        <item>This point has become congestion hotspot do something.</item>
        <item>public buses not clean.</item>
        <item>Upgrade public buses  with wifi</item>
        <item>Autorickshaw refusal menance here.</item>
        <item>Public buses conductor being rude.</item>
        <item>autorickshaw misbehavior menance here.</item>
        <item>Please have a training programme before giving auto licenses.</item>
        <item>Autorickshaw not following meters&#8230; overcharging.</item>
        <item>Reduce public bus fare.</item>
        <item>As citizen want to how bus system work please launch a awareness campaign.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="road">
        <item>What will we do without roads, no roads here city sucks.</item>
        <item>No roads in my area.</item>
        <item>There are potholes everywhere on this road.</item>
        <item>Road is  in bad shape.</item>
        <item>These Roads are dirty all the time do somethings.</item>
        <item>Road tax too much.</item>
        <item>How these road tender get allocate, as citizen we need to know, please launch a awareness programme.</item>
        <item>No cleanliness, launch an awareness programme on how citizens can help.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="sewage">
        <item>No Sewage pipe in my area.</item>
        <item>No close by municipality Garbage truck in my area.</item>
        <item>Please  increase the garbage truck capacity.</item>
        <item>Sewage is over flowing everywhere.</item>
        <item>Lot of manholes left open.</item>
        <item>Lot of garbage is left unaddressed.</item>
        <item>My surrounding has become a garbage yard, please take care of it.</item>
        <item>Garbage has made environment like hell, is this the city we dreamt of.</item>
        <item>Sewage / Sanitation department staff is very rude.</item>
        <item>Sewage/Sanitation department staff is totally outdated&#8230; Stoneage.</item>
        <item>Sewage charges are too much.</item>
        <item>Streets are dirty all the time, please launch awareness programme. Explain how citizens can help.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="basic_items">
        <item>@string/water</item>
        <item>@string/law</item>
        <item>@string/electricity</item>
        <item>@string/transportation</item>
        <item>@string/road</item>
        <item>@string/sewage</item>
    </string-array>
    <string-array name="basic_items_vals">
        <item>water</item>
        <item>lawandorder</item>
        <item>electricity</item>
        <item>transportation</item>
        <item>road</item>
        <item>sewage</item>
    </string-array>
    <string name="lack_of_infra">Lack of infrastructure</string>
    <string name="lack_of_main">Lack of mainteinance</string>
    <string name="lack_of_quality">Lack of Quality of staff</string>
    <string name="poor_pricing">Poor Pricing</string>
    <string name="awareness">Awareness</string>
    <string name="others">Others</string>
    <string-array name="infra">
        <item>@string/lack_of_infra</item>
        <item>@string/lack_of_main</item>
        <item>@string/lack_of_quality</item>
        <item>@string/poor_pricing</item>
        <item>@string/awareness</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="lawandorder">
        <item>No close by police station in my area.</item>
        <item>Rowdiness in on the rise in the neighbourhood.</item>
        <item>My area feels very insecure.</item>
        <item>Judgements are dragging for long, improve the judiciary.</item>
        <item>Police station not well maintained, gives gloomy feeling.</item>
        <item>Court compounds not well maintained.</item>
        <item>Police station staff not co-operative.</item>
        <item>Quality of lawyers detriorating.</item>
        <item>Courts are becoming totally unaffordable do something.</item>
        <item>Increase constable/Inspector salary, bribes on rise.</item>
        <item>police is not working to hard to reach to people.</item>
        <item>High level of distrust on police.</item>
        <item>should not be there a police awareness day, once in 3 months, where citizen should be encouraged to review there police stations, if they are happy with service of staff.</item>
        <item>court system sucks, i want to bow out of contract of signing the constitution.</item>
        <item>should not there be a court awareness day, once in 3 months, where citizens should be encouraged to review there courts, to check that they are happy with service of the staff.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string name="otherTypeOfComplaint">Others</string>
    <string name="network_error">Could not connect to server.</string>
    <string name="dialog_please_wait">Please wait&#8230;</string>
    <string name="city_delhi">Delhi</string>
    <string name="city_bangalore">Bangalore</string>
    <string-array name="city">
        <item>@string/city_delhi</item>
        <item>@string/city_bangalore</item>
    </string-array>
    <string name="issue_details_sending">Submitting Issue and retrieving responsible MLA information.</string>
    <string name="total_issues">74</string>
</resources>