<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:issueButton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_issue_scroll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <FrameLayout
            android:id="@+id/main_map_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_map_height" >

            <fragment
                android:id="@+id/map"
                android:name="com.jansampark.vashisthg.widget.CustomSupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:zOrderOnTop="true"
               />

            <View
                android:id="@+id/map_blocker"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            

        </FrameLayout>
        
        <TextView
                android:id="@+id/main_map_location_text"
                android:layout_gravity="center|bottom"
                android:paddingTop="@dimen/main_map_location_top_margin"
                android:paddingBottom="@dimen/main_map_location_top_margin"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_map_text_bg"
                 />

        <TextView
            android:id="@+id/main_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_select_margin_bottom"
            
            android:gravity="center"
            android:text="@string/main_select"
            android:textSize="@dimen/main_select_text" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                
                android:gravity="center"
                tools:ignore="ObsoleteLayoutParam" >

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_road"
                    android:layout_width="@dimen/issue_button_width"
                    android:layout_height="@dimen/issue_button_height"                 
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_road" 
                    issueButton:image="@drawable/ic_issue_road"/>

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_water"
                    android:layout_width="@dimen/issue_button_width"
                    android:layout_height="@dimen/issue_button_height"     
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_water" 
                    issueButton:image="@drawable/ic_issue_water"/>

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_transportation"
                    android:layout_width="@dimen/issue_button_width"
                    android:layout_height="@dimen/issue_button_height"
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_transportation" 
                    issueButton:image="@drawable/ic_issue_transport" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                
                android:gravity="center" >

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_electricity" 
                    issueButton:image="@drawable/ic_issue_electricity" />

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_law"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_law_and_order" 
                    issueButton:image="@drawable/ic_issue_law" />

                <com.jansampark.vashisthg.widget.IssueButton
                    android:id="@+id/main_sewage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    
                    issueButton:tertiaryText="@null"
                    issueButton:bottomText="@string/main_sewage" 
                    issueButton:image="@drawable/ic_issue_sewage" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
