<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/issue_banner"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/issue_top_banner_height"
    android:background="@drawable/banner_water" >

    <TextView
        android:id="@+id/issue_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_issue_issues"
        android:drawablePadding="12dp"
        android:text="@string/issue_issues"
        android:textColor="@android:color/primary_text_dark"
        android:visibility="visible" />

    <TextView
        android:id="@+id/issue_complaints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/issue_issues"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/issue_issues"
        android:drawableLeft="@drawable/ic_issue_complaints"
        android:drawablePadding="12dp"
        android:text="@string/issue_complaints"
        android:textColor="@android:color/primary_text_dark" />

    <TextView
        android:id="@+id/issue_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/issue_bullet"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-12dp"
        android:layout_toRightOf="@+id/issue_bullet"
        android:text="@string/main_water"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="@dimen/issue_top_banner_title_size" />

    <View
        android:id="@+id/issue_bullet"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_issue_bullet" >
    </View>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:scaleType="fitEnd"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:onClick="onVideoClick"
        android:contentDescription="@string/app_name"
        android:src="@drawable/video_preview_fg" />

</RelativeLayout>
